[tool.poetry]
name = "pipeline"
version = "0.1.0"
description = ""
authors = ["Timothy Gu <timothygu@stanford.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
parso = "^0.8.3"
semgrep = "^1.1.0"
openai = "^0.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
